--- a/test.css
+++ b/test.css
@@ -5,6 +5,10 @@
   --color: rgb(63 63 63);
 }
 
+table, th, td {
+  border: 1px solid;
+}
+
 body {
   margin: 0;
   font-family: Poppins, sans-serif;
