--- a/test.css
+++ b/test.css
@@ -17,6 +17,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  opacity: 50%;
 
   /*  this is where the magic happens:  */
   background-attachment: fixed;
